--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".about" ></activity>
-
+        <activity android:name=".about" />
+        <activity android:name=".exit"></activity>
     </application>
 
 </manifest>
